# global-viewer-portal

./: .gitignore  Makefile  README.md  colors.txt  colors2.txt  index.html  index001.html  index002.html  index003.html  index004.html  index005.html  index006.html  index007.html  index008.html  index009.html  index010.html  index011.html  main.py  pyproject.toml  requirements.txt  tileserver.py  tiling-instructions.md
notes/: 20260429.txt.py  20260430-geotiff-cog-debugging.txt
spec/: catchup_prompt.txt  global_viewer_portal.py  main.py
spec-build/: source_map.json  spec-0f9bc8e6241718da3039.xml  spec-23ad9f318c62b841a001.xml  spec-502b3b6bc0f24736e44b.xml  spec-6d26f63bba717345c55b.xml  spec-ceb10f567a3a26d5a90d.xml
